public interface ISpreadLogic
{
    void Spread(IVirus virus, Board board);
}
