public enum SpreadLogicType
{
    Uniform,
    DistanceWeighted,
    Focused
}
